update inspect evaluation notebook

--- a/notebooks/02_inspect_evaluation.ipynb
+++ b/notebooks/02_inspect_evaluation.ipynb
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -380,6 +380,16 @@
       "text/plain": [
        "Output()"
       ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
      },
      "metadata": {},
      "output_type": "display_data"
