run evals on anthropic models

--- a/notebooks/02_inspect_evaluation.ipynb
+++ b/notebooks/02_inspect_evaluation.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +52,11 @@
     "openai_client = OpenAI()\n",
     "\n",
     "assistant_model = \"claude-3-7-sonnet-20250219\"\n",
-    "eval_model = \"openai/gpt-4o-mini\"\n",
-    "#model = \"claude-3-5-sonnet-20240620\"\n",
+    "#eval_model = \"gpt-4o-mini\"\n",
+    "#eval_model = \"openai/gpt-4.1-mini\"\n",
+    "eval_model = \"anthropic/claude-3-7-sonnet-20250219\"\n",
+    "#eval_model = \"anthropic/claude-sonnet-4-20250514\"\n",
+    "\n",
     "#model=\"claude-3-7-sonnet-20250219\""
    ]
   },
@@ -367,13 +370,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb883f728208432288d47ba320f0376c",
+       "model_id": "04f456b7965144a7a1cb602b79ab66fd",
        "version_major": 2,
        "version_minor": 0
       },
