Complete evals for gpt-4o-mini

--- a/notebooks/01_question_generation.ipynb
+++ b/notebooks/01_question_generation.ipynb
@@ -2176,7 +2176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2187,6 +2187,15 @@
       "\n",
       "Warning: using unexpected model 'claude-3-7-sonnet-20250219'\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated 296 new questions, have 296/300 total questions\n",
+      "Generated 3 new questions, have 299/300 total questions\n",
+      "Generated 1 new questions, have 300/300 total questions\n"
      ]
     }
    ],
