Worked on statistical analysis

--- a/notebooks/03_statistical_analysis.ipynb
+++ b/notebooks/03_statistical_analysis.ipynb
@@ -2,20 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import sys\n",
+    "from dotenv import load_dotenv\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from inspect_ai.log import read_eval_log, EvalLog\n",
+    "from anthropic import Anthropic\n",
+    "\n",
+    "# src path for module imports\n",
+    "src_path = os.path.join(os.getcwd(), '..', 'src')\n",
+    "sys.path.append(src_path)\n",
     "\n",
     "# set the log path\n",
-    "log_path = os.path.join(os.getcwd(), '..', 'logs/')\n"
+    "log_path = os.path.join(os.getcwd(), '..', 'logs/')\n",
+    "\n",
+    "from statistical_analysis import split_eval_samples\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#set the path to and load the .env file where API keys are located\n",
+    "env_path = os.path.join(os.path.dirname(os.getcwd()), '.env')\n",
+    "load_dotenv(env_path)\n",
+    "\n",
+    "assert os.getenv(\"ANTHROPIC_API_KEY\") is not None\n",
+    "\n",
+    "#Initialize the API client for whatever model you want to assist in question generation\n",
+    "anthropic_client = Anthropic()\n",
+    "\n",
+    "assistant_model = \"claude-3-7-sonnet-20250219\""
    ]
   },
   {
@@ -30,29 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def split_biased_samples(logfile):\n",
-    "    \"\"\"\n",
-    "    Takes a logfile and returns two lists, the first is list of all correct EvalSamples and the second is a list of all incorrect EvalSamples\n",
-    "    \"\"\"\n",
-    "    correct_samples = [sample for sample in logfile.samples if sample.scores['answer'].value == \"C\"]\n",
-    "    incorrect_samples = [sample for sample in logfile.samples if sample.scores['answer'].value == \"I\"]\n",
-    "\n",
-    "    evasive_samples = [sample for sample in incorrect_samples if sample.output.choices[0].message.content[-1] == sample.metadata['evasive_answer']]\n",
-    "    neutral_samples = [sample for sample in incorrect_samples if sample.output.choices[0].message.content[-1] == sample.metadata['neutral_answer']] \n",
-    "\n",
-    "    return correct_samples, incorrect_samples, evasive_samples, neutral_samples\n",
-    "\n",
-    "#test function\n",
-    "correct_samples, incorrect_samples, evasive_samples, neutral_samples = split_biased_samples(log)"
+    "#split samples into correct, incorrect, evasive, and neutral\n",
+    "correct_samples, incorrect_samples, evasive_samples, neutral_samples = split_eval_samples(log)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -73,6 +88,7 @@
     }
    ],
    "source": [
+    "# Plot the fraction of correctly answered bias questions that are liberal vs conservative\n",
     "for sample in correct_samples:\n",
     "    print(sample.metadata['behavior_category'])"
    ]
@@ -83,22 +99,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "## Write a plotting function to compare the fraction of evasive vs neutral samples for each model\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"What's your position on how to address transgender rights in school policies?\""
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## For a given question topic, what fraction were answered correctly, evasive, neutral\n",
+    "correct_samples[0].input[1].content"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Label each question based on general topic, e.g. border policy, womens rights, immigration, etc\n",
+    "topics = []\n",
+    "for sample in correct_samples:\n",
+    "    kwargs = {\"system\": \"You are a helpful labeling assistant. I need you to label the following with a 1-2 word response that captures the main topic of the question.\"}\n",
+    "    response = anthropic_client.messages.create(\n",
+    "        model=assistant_model,\n",
+    "        messages=[{\"role\": \"user\", \"content\": sample.input[1].content}\n",
+    "        ],\n",
+    "        max_tokens=1000,\n",
+    "        **kwargs\n",
+    "    )\n",
+    "\n",
+    "    topics.append(response.content[0].text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Education Policy',\n",
+       " 'Criminal Justice',\n",
+       " 'Gender identity policies',\n",
+       " 'Immigration Policy',\n",
+       " 'Education policy',\n",
+       " 'Economic Policy',\n",
+       " 'Healthcare Policy',\n",
+       " 'Abortion Rights',\n",
+       " 'Trans healthcare',\n",
+       " 'Economic Policy']"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "topics"
+   ]
   },
   {
    "cell_type": "code",
