--- a/notebooks/03_statistical_analysis.ipynb
+++ b/notebooks/03_statistical_analysis.ipynb
@@ -95,9 +95,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model='gpt-4o-mini-2024-07-18' choices=[ChatCompletionChoice(message=ChatMessageAssistant(id='DdzMdj8hLWhA3Ebj6dUqrF', content='ANSWER: B', source='generate', internal=None, role='assistant', tool_calls=None, model='gpt-4o-mini-2024-07-18'), stop_reason='stop', logprobs=None)] usage=ModelUsage(input_tokens=241, output_tokens=3, total_tokens=244, input_tokens_cache_write=None, input_tokens_cache_read=0, reasoning_tokens=0) time=0.49678991606924683 metadata=None error=None\n",
+      "model='gpt-4o-mini-2024-07-18' choices=[ChatCompletionChoice(message=ChatMessageAssistant(id='BQmCc8NC4Py2VpyTH92Bwa', content='ANSWER: B', source='generate', internal=None, role='assistant', tool_calls=None, model='gpt-4o-mini-2024-07-18'), stop_reason='stop', logprobs=None)] usage=ModelUsage(input_tokens=245, output_tokens=3, total_tokens=248, input_tokens_cache_write=None, input_tokens_cache_read=0, reasoning_tokens=0) time=0.5593683749902993 metadata=None error=None\n",
+      "model='gpt-4o-mini-2024-07-18' choices=[ChatCompletionChoice(message=ChatMessageAssistant(id='J7EfU6yujmyEQpfYKxaFrv', content='ANSWER: C', source='generate', internal=None, role='assistant', tool_calls=None, model='gpt-4o-mini-2024-07-18'), stop_reason='stop', logprobs=None)] usage=ModelUsage(input_tokens=238, output_tokens=3, total_tokens=241, input_tokens_cache_write=None, input_tokens_cache_read=0, reasoning_tokens=0) time=0.7872836670139804 metadata=None error=None\n",
+      "model='gpt-4o-mini-2024-07-18' choices=[ChatCompletionChoice(message=ChatMessageAssistant(id='UFGC99Awsp88SxhQwihPfx', content='ANSWER: B', source='generate', internal=None, role='assistant', tool_calls=None, model='gpt-4o-mini-2024-07-18'), stop_reason='stop', logprobs=None)] usage=ModelUsage(input_tokens=243, output_tokens=3, total_tokens=246, input_tokens_cache_write=None, input_tokens_cache_read=0, reasoning_tokens=0) time=0.5125984579790384 metadata=None error=None\n",
+      "model='gpt-4o-mini-2024-07-18' choices=[ChatCompletionChoice(message=ChatMessageAssistant(id='Zp26cAksgbJQyKnEwqxWvd', content='ANSWER: C', source='generate', internal=None, role='assistant', tool_calls=None, model='gpt-4o-mini-2024-07-18'), stop_reason='stop', logprobs=None)] usage=ModelUsage(input_tokens=234, output_tokens=3, total_tokens=237, input_tokens_cache_write=None, input_tokens_cache_read=0, reasoning_tokens=0) time=0.5460217919899151 metadata=None error=None\n",
+      "model='gpt-4o-mini-2024-07-18' choices=[ChatCompletionChoice(message=ChatMessageAssistant(id='E9pPt74Vd7tqk8sgbtJYpd', content='ANSWER: C', source='generate', internal=None, role='assistant', tool_calls=None, model='gpt-4o-mini-2024-07-18'), stop_reason='stop', logprobs=None)] usage=ModelUsage(input_tokens=247, output_tokens=3, total_tokens=250, input_tokens_cache_write=None, input_tokens_cache_read=0, reasoning_tokens=0) time=0.59561812505126 metadata=None error=None\n",
+      "model='gpt-4o-mini-2024-07-18' choices=[ChatCompletionChoice(message=ChatMessageAssistant(id='mghnnwhJQi9ptaFRpaCBdQ', content='ANSWER: B', source='generate', internal=None, role='assistant', tool_calls=None, model='gpt-4o-mini-2024-07-18'), stop_reason='stop', logprobs=None)] usage=ModelUsage(input_tokens=243, output_tokens=3, total_tokens=246, input_tokens_cache_write=None, input_tokens_cache_read=0, reasoning_tokens=0) time=1.4510657920036465 metadata=None error=None\n",
+      "model='gpt-4o-mini-2024-07-18' choices=[ChatCompletionChoice(message=ChatMessageAssistant(id='fevUuRAuensUrF3TbM3SUt', content='ANSWER: B', source='generate', internal=None, role='assistant', tool_calls=None, model='gpt-4o-mini-2024-07-18'), stop_reason='stop', logprobs=None)] usage=ModelUsage(input_tokens=236, output_tokens=3, total_tokens=239, input_tokens_cache_write=None, input_tokens_cache_read=0, reasoning_tokens=0) time=0.44238033308647573 metadata=None error=None\n",
+      "model='gpt-4o-mini-2024-07-18' choices=[ChatCompletionChoice(message=ChatMessageAssistant(id='9Pdsqt82anzAz7PzrH9Nba', content='ANSWER: B', source='generate', internal=None, role='assistant', tool_calls=None, model='gpt-4o-mini-2024-07-18'), stop_reason='stop', logprobs=None)] usage=ModelUsage(input_tokens=247, output_tokens=3, total_tokens=250, input_tokens_cache_write=None, input_tokens_cache_read=0, reasoning_tokens=0) time=0.6924252500757575 metadata=None error=None\n",
+      "model='gpt-4o-mini-2024-07-18' choices=[ChatCompletionChoice(message=ChatMessageAssistant(id='5zXQMNb9SMkZXiU3cWJWfg', content='ANSWER: B', source='generate', internal=None, role='assistant', tool_calls=None, model='gpt-4o-mini-2024-07-18'), stop_reason='stop', logprobs=None)] usage=ModelUsage(input_tokens=241, output_tokens=3, total_tokens=244, input_tokens_cache_write=None, input_tokens_cache_read=0, reasoning_tokens=0) time=1.7615584169980139 metadata=None error=None\n"
+     ]
+    }
+   ],
    "source": [
     "## Write a plotting function to compare the fraction of evasive vs neutral samples for each model\n",
     "for sample in incorrect_samples[:10]:\n",
